src/unit_tests/CustCodeGeneration/success/simple.cl
class Main {
    a : Int <- 5;
    b : Int;
    
    main() : Int {1};
};