src/unit_tests/CustCodeGeneration/fail/case-err.cl
class Main {
    x : Main;
    main() : Int {{
        case x of
            x : Object => "fun";
        esac;
        1;
    }};
};